Correção das opções dos menus-feito

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,5 @@
 <!-- app/templates/auth/login.html -->
-{% extends "base_auth.html" %} {# Usa um base diferente ou ajusta o base.html #}
+{% extends "base.html" %} {# Usa um base diferente ou ajusta o base.html #}
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}{{ title }}{% endblock %}
